added tage to images throughout website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
    
-    <title>Clean Slate Pressure Washing Services Website</title>
+    <title>Clean Slate Pressure Washing Services Website HomePage</title>
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+
 
 
 </head>
@@ -148,11 +150,11 @@
 
 
                             <div class="rounded-social-buttons">
-                                <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
-                                <a class="social-button yelp"  href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><i class="fab fa-yelp"></i></a>
-                                <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank" title="Social-Link"><i class="fab fa-facebook-f"></i></a>
+                                <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" title="Social-Link" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" title="Social-Link" target="_blank"><i class="fab fa-tiktok"></i></a>
+                                <a class="social-button yelp"  href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" title="Social-Link" target="_blank"><i class="fab fa-yelp"></i></a>
+                                <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" title="Social-Link" target="_blank"><i class="fab fa-linkedin"></i></a>
                             </div>
 
 
@@ -161,9 +163,9 @@
 
                             <h2>Click Below to see our reviews and Contact us!</h2>
                         <div class="review-buttons">
-                        <a href="https://www.google.com/localservices/prolist?spp=Cg0vZy8xMWtwdmRfcngx&scp=CgAaJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXMqJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXM%3D&q=Clean+Slate+Pressure+Washing+Services&src=2&slp=UhUIARIREg8iDS9nLzExa3B2ZF9yeDE" target="_blank"><img src="img\5stargoogle.png" width="100" height="50" alt="Photo of resort in Boracay, Philippines" style="border-radius: 1rem;" /></a>
+                        <a href="https://www.google.com/localservices/prolist?spp=Cg0vZy8xMWtwdmRfcngx&scp=CgAaJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXMqJUNsZWFuIFNsYXRlIFByZXNzdXJlIFdhc2hpbmcgU2VydmljZXM%3D&q=Clean+Slate+Pressure+Washing+Services&src=2&slp=UhUIARIREg8iDS9nLzExa3B2ZF9yeDE" title="Social-Link" target="_blank"><img src="img\5stargoogle.png" width="100" height="50" alt="Google logo img" style="border-radius: 1rem;" /></a>
                         
-                        <a href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><img src="img\yelpreview.png" width="100" height="50" alt="Photo of resort in Boracay, Philippines" style="border-radius: 1rem;" /></a>
+                        <a href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" title="Social-Link" target="_blank"><img src="img\yelpreview.png" width="100" height="50" alt="Yelp logo img" style="border-radius: 1rem;" /></a>
 
                     </div>
 
@@ -574,11 +576,11 @@
             <div class="footer-widget">
                 <br>
                  <div class="rounded-social-buttons">
-                     <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                     <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
-                     <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
-                     <a class="social-button yelp"  href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><i class="fab fa-yelp"></i></a>
-                     <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin"></i></a>
+                     <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" title="Social-Link" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                     <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" title="Social-Link" target="_blank"><i class="fab fa-instagram"></i></a>
+                     <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" title="Social-Link" target="_blank"><i class="fab fa-tiktok"></i></a>
+                     <a class="social-button yelp"  href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" title="Social-Link" target="_blank"><i class="fab fa-yelp"></i></a>
+                     <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" title="Social-Link" target="_blank"><i class="fab fa-linkedin"></i></a>
                     
                  </div>
              </div>
