--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html manifest="cache.manifest">
 
 
 <head>
@@ -10,6 +11,7 @@
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
+  
    
    <link rel="icon" type="image/png" href="img\whitecleanslatelogo.jpg" 6>
 
@@ -446,7 +448,7 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg" alt="Gallery Image">
+                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg" layout="responsive" alt="Gallery Image"></img>
                     <img class="full" src="img\anotherfrontporch-after.jpg" alt="Gallery Image" loading="lazy">
                   </label>
             </div>
