added cache control

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<html manifest="cache.manifest">
+
 
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+ 
+    <meta http-equiv="Cache-control" content="public">
    
     <title>Clean Slate Pressure Washing Services Website HomePage</title>
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
-  
+    
    
    <link rel="icon" type="image/png" href="img\whitecleanslatelogo.jpg" 6>
 
