--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Cache-control" content="public">
+
 <title>Clean Slate Gallery Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="name" content="Clean Slate Pressure Washing Services" />
