--- a/services.html
+++ b/services.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
 <meta charset="utf-8">
+<meta http-equiv="Cache-control" content="public">
+
 <title>Clean Slate Services page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="name" content="Services Page " />
