removal of font from link

--- a/services.html
+++ b/services.html
@@ -3,8 +3,7 @@
 
 <head>
 
-<meta charset="utf-8">
-<meta http-equiv="Cache-control" content="public">
+<meta charset="utf-8"><meta http-equiv="Cache-control" content="public">
 
 <title>Clean Slate Services page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +12,6 @@
  
 <link href="css/bootstrap.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 <link href="css/style.css" rel="stylesheet" />
 
