--- a/services.html
+++ b/services.html
@@ -3,7 +3,8 @@
 
 <head>
 
-<meta charset="utf-8"><meta http-equiv="Cache-control" content="public">
+<meta charset="utf-8">
+<meta http-equiv="Cache-control" content="public">
 
 <title>Clean Slate Services page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
