fixed the instagram page link

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <div class="nav-social-icons">
                         
                             <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a class="social-button instagram" href="https://www.instagram.com/cleanslatepressurewashnola/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
                             <a class="social-button yelp" href="https://www.yelp.com/" target="_blank"><i class="fab fa-yelp"></i></a>
                             <a class="social-button linkedin" href="www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -153,7 +153,7 @@
 
                             <div class="rounded-social-buttons">
                                 <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank" title="Social-Link"><i class="fab fa-facebook-f"></i></a>
-                                <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" title="Social-Link" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a class="social-button instagram" href="https://www.instagram.com/cleanslatepressurewashnola/" title="Social-Link" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" title="Social-Link" target="_blank"><i class="fab fa-tiktok"></i></a>
                                 <a class="social-button yelp"  href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" title="Social-Link" target="_blank"><i class="fab fa-yelp"></i></a>
                                 <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" title="Social-Link" target="_blank"><i class="fab fa-linkedin"></i></a>
