--- a/services.html
+++ b/services.html
@@ -4,7 +4,8 @@
 <head>
 
 <meta charset="utf-8">
-<meta http-equiv="Cache-control" content="public">
+<meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
 
 <title>Clean Slate Services page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
