removal of br in about section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     
                   
 
-                        <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property.<br> At Clean Slate you will receive a quality experience.  We at Clean Slate take care of all your Power and Soft washing needs including <br> house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
+                        <p> Clean slate Pressure Washing LLC is located in South Louisiana and specializes in cleaning up your property. At Clean Slate you will receive a quality experience. We at Clean Slate take care of all your Power and Soft washing needs including house, deck, patio, soft wash roof and sidewalks. Clean Slate will make you proud to call your house a home.
 
 
                             <div class="rounded-social-buttons">
