--- a/gallery.html
+++ b/gallery.html
@@ -5,8 +5,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Cache-control: max-age=31536000" content="no-cache, no-store, must-revalidate"><meta http-equiv="Pragma" content="no-cache">
 
 <title>Clean Slate Gallery Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
