--- a/index.html
+++ b/index.html
@@ -487,9 +487,12 @@
 
     <div class="quote-container">
 
-       <div class="quote-btn-container">
-        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-phone"></i></a>
-
+       <div class="container">
+        <div class="bounce-text">
+        
+            Contact Us Below <br>For a Free Quote
+        
+    </div>
        </div>
 
 
@@ -572,8 +575,8 @@
 
     <script src="js/jquery.js"></script> 
     <script src="js/bootstrap.min.js"></script> 
-    <script src="js/portfolio/jquery.quicksand.js"></script> 
-    <script src="js/portfolio/setting.js"></script>  
+ 
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js\script.js"></script>
    
