--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
 
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+<link rel="stylesheet" href="scss/custom.css">
+
 </head>
 
 
@@ -28,7 +32,7 @@
 
 <body>
 
-<div class="service-page">
+
 
  <!-- start header -->
 
@@ -95,11 +99,18 @@
 
 <!-- end header -->
 
+<div class="header-container">
 
-<div class="gallery-heading">
-<h8> Gallery</h8><hr>
+<h8>
+  Gallery
+  <div class="title-decoration">
+  
+      <i class="fa fa-images"></i>
+  </div>
+</h8>
+
+
 </div>
-
 
 <div id="gallery" class="container-fluid">  
 
@@ -209,24 +220,28 @@
 
 <section class ="free-quote-section">
 
-    <div class="quote-container">
+  <div class="quote-container">
 
-       <div class="quote-btn-container">
-        <a class="quote-btn" href="tel:5043527963">Call for a Free Estimate Today! <i class="fas fa-phone"></i></a>
+     <div class="container">
+      <div class="bounce-text">
+      
+          Contact Us Below <br>For a Free Quote
+      
+  </div>
+     </div>
 
-       </div>
 
 
 
 
-
-    </div>
+  </div>
 
 
 
 
 
 </section>
+
 
 
 
