--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg" layout="responsive" alt="Gallery Image"></img>
+                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg"  alt="Gallery Image"></img>
                     <img class="full" src="img\anotherfrontporch-after.jpg" alt="Gallery Image"></img>
                   </label>
             </div>
