quick fix to gallery, service.html

--- a/gallery.html
+++ b/gallery.html
@@ -100,16 +100,17 @@
 
 <!-- end header -->
 
-<div class="gallery-header-container">
+<div class="container">
 
-<h8>
+<h6>
   Gallery
   <div class="title-decoration">
   
       <i class="fa fa-images"></i>
   </div>
-</h8>
+</h6>
 
+</div>
 
 </div>
 
