--- a/services.html
+++ b/services.html
@@ -106,13 +106,13 @@
 
 <div class="header-container">
 
-  <h8>
+  <h6>
    Services
     <div class="title-decoration">
     
-        <i class="fa fa-images"></i>
+        <i class="fa-brands fa-creative-commons-nd"></i>
     </div>
-  </h8>
+  </h6>
   
   
   </div>
