--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\gutter-before.jpg"  alt="Gallery Image"></img>
+                    <img class="thumbnail" src="img\gutter-before.jpg"  alt="Gallery Image" loading="lazy"></img>
                     <img class="full" src="img\gutter-after.jpg" alt="Gallery Image" loading="lazy"></img>
                   </label>
 
