--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg"  alt="Gallery Image"></img>
+                    <img class="thumbnail" src="img\anotherfrontporch-before.jpg"  alt="Gallery Image" loading="lazy"></img>
                     <img class="full" src="img\anotherfrontporch-after.jpg" alt="Gallery Image" loading="lazy"></img>
                   </label>
             </div>
@@ -459,7 +459,7 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\parkinglot-after.jpg" alt="Gallery Image"></img>
+                    <img class="thumbnail" src="img\parkinglot-after.jpg" alt="Gallery Image" loading="lazy"></img>
                     <img class="full" src="img\parkinglot-before.jpg" alt="Gallery Image" loading="lazy" ></img>
                   </label>
             </div>
@@ -467,7 +467,7 @@
             <div class="gallery-item">
                 <label>
                     <input class="image-toggler" type="checkbox">
-                    <img class="thumbnail" src="img\fence-before.jpg" alt="Gallery Image"></img>
+                    <img class="thumbnail" src="img\fence-before.jpg" alt="Gallery Image" loading="lazy"></img>
                     <img class="full" src="img\fence-after.jpg" alt="Gallery Image" loading="lazy"></img>
                   </label>
             </div>
