--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\fence-after.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\fence-after.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Fence Washing</div>
