chnaged all images to webp format

--- a/gallery.html
+++ b/gallery.html
@@ -121,14 +121,14 @@
     </source>
   </video>
 
-  <img src="img\cslogobeforeandafter.jpg" alt="Gallery page Image" class="img-responsive">
+  <img src="img\cslogobeforeandafter.webp" alt="Gallery page Image" class="img-responsive">
 
 
   <label>
 
     <input class="image-toggler" type="checkbox" alt="Gallery page Image">
-    <img class="thumbnail" src="img\walkway1.jpg" alt="Gallery page Image">
-    <img class="full" src="img\walkway2.jpg" alt="Gallery page Image"loading="lazy">
+    <img class="thumbnail" src="img\walkway1.webp" alt="Gallery page Image">
+    <img class="full" src="img\walkway2.webp" alt="Gallery page Image"loading="lazy">
     <h6>Click Above</h6>
   </label>
 
@@ -138,34 +138,34 @@
     </source>
   </video>
 
-  <img src="img\after1.jpg" alt="Gallery page Image" class="img-responsive">
+  <img src="img\after1.webp" alt="Gallery page Image" class="img-responsive">
 
 
   <label>
     <input class="image-toggler" type="checkbox">
-    <img class="thumbnail" src="img\driveway1.jpg" alt="Gallery page Image">
-    <img class="full" src="img\driveway2.jpg" alt="Gallery page Image" loading="lazy">
+    <img class="thumbnail" src="img\driveway1.webp" alt="Gallery page Image">
+    <img class="full" src="img\driveway2.webp" alt="Gallery page Image" loading="lazy">
     <h6>Click Above</h6>
   </label>
 
 
-<img src="img\before-and-after3.jpg" alt="Gallery page Image" class="img-responsive">
+<img src="img\before-and-after3.webp" alt="Gallery page Image" class="img-responsive">
 
 
-  <img src="img\before-and-after5.jpg" alt="Gallery page Image" class="img-responsive">
+  <img src="img\before-and-after5.webp" alt="Gallery page Image" class="img-responsive">
 
-  <img src="img\before-and-after2.jpg" alt="Gallery page Image" class="img-responsive">
+  <img src="img\before-and-after2.webp" alt="Gallery page Image" class="img-responsive">
 
 
   <label>
     <input class="image-toggler" type="checkbox">
-    <img class="thumbnail" src="img\driveway-before.jpg" alt="Gallery page Image">
-    <img class="full" src="img\driveway-after.jpg" alt="Gallery page Image" loading="lazy">
+    <img class="thumbnail" src="img\driveway-before.webp" alt="Gallery page Image">
+    <img class="full" src="img\driveway-after.webp" alt="Gallery page Image" loading="lazy">
     <h6>Click Above</h6>
   </label>
 
 
-  <img src="img\gaststationafter.jpg" alt="Gallery page Image" class="img-responsive">
+  <img src="img\gaststationafter.webp" alt="Gallery page Image" class="img-responsive">
 
 
   <video class="vid" controls>
@@ -174,30 +174,29 @@
   </video>
 
 
-  <img src="img\afterwalkway.jpg" alt="Gallery page Image" class="img-responsive">
 
   <video class="vid" controls>
     <source src="img\Download (2).mp4" alt="Gallery Video" type="video/mp4">
     </source>
   </video>
 
-<img src="img\cslogobeforeandafter2.jpg" alt="Gallery page Image" class="img-responsive">
+<img src="img\cslogobeforeandafter2.webp" alt="Gallery page Image" class="img-responsive">
 
 
-<label>
+
   <label>
     <input class="image-toggler" type="checkbox">
-    <img class="thumbnail" src="img\anotherfrontporch-before.jpg" alt="Gallery page Image">
-    <img class="full" src="img\anotherfrontporch-after.jpg" alt="Gallery page Image" loading="lazy">
+    <img class="thumbnail" src="img\anotherfrontporch-before.webp" alt="Gallery page Image">
+    <img class="full" src="img\anotherfrontporch-after.webp" alt="Gallery page Image" loading="lazy">
     <h6>Click Above</h6>
   </label>
 
-<img src="img\siding-after.jpg" alt="Gallery Page Image" class="img-responsive">
+<img src="img\house.webp" alt="Gallery Page Image" class="img-responsive">
 
 <label>
   <input class="image-toggler" type="checkbox">
-  <img class="thumbnail" src="img\anotherfrontporch-before.jpg" alt="Gallery page Image">
-  <img class="full" src="img\anotherfrontporch-after.jpg" alt="Gallery page Image" loading="lazy">
+  <img class="thumbnail" src="img\siding-before.webp" alt="Gallery page Image">
+  <img class="full" src="img\siding-after.webp" alt="Gallery page Image" loading="lazy">
   <h6>Click Above</h6>
 </label>
 
@@ -292,7 +291,7 @@
           <br>
            <div class="rounded-social-buttons">
                <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
-               <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank"><i class="fab fa-instagram"></i></a>
+               <a class="social-button instagram" href="https://www.instagram.com/cleanslatepressurewashnola/" target="_blank"><i class="fab fa-instagram"></i></a>
                <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
                <a class="social-button yelp" href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><i class="fab fa-yelp"></i></a>
                   <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin"></i></a>
