--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\siding-after.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\siding-after.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Power/Pressure/Soft Washing</div>
@@ -143,7 +143,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\house.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\house.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Residential house Washing</div>
@@ -155,7 +155,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\gasstation.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\gasstation.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Commercial Cleaning</div>
@@ -169,7 +169,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\driveway-after.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\driveway-after.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Concrete Cleaning</div>
@@ -181,7 +181,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\pooldeck.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\pooldeck.webp" alt="Services picture"></img>
         </div>
 
 
@@ -195,7 +195,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\fence-after.jpg" alt="Services picture"></img>
+          <img class="service-img" src="img\fence-after.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Fence Washing</div>
@@ -207,7 +207,7 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\oilstain.png" alt="Services picture"></img>
+          <img class="service-img" src="img\oilstain.webp" alt="Services picture"></img>
         </div>
 
         <div class="service-title">Oil Stain Removal</div>
@@ -300,7 +300,7 @@
           <br>
            <div class="rounded-social-buttons">
                <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" title="Social-Link" target="_blank"><i class="fab fa-facebook-f"></i></a>
-               <a class="social-button instagram" href="https://www.instagram.com/naquinrickey/?igshid=MzRlODBiNWFlZA%3D%3D" title="Social-Link" target="_blank"><i class="fab fa-instagram"></i></a>
+               <a class="social-button instagram" href="https://www.instagram.com/cleanslatepressurewashnola/" target="_blank"><i class="fab fa-instagram"></i></a>
                <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" title="Social-Link" target="_blank"><i class="fab fa-tiktok"></i></a>
                <a class="social-button yelp" href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" target="_blank"><i class="fab fa-yelp"></i></a>
                <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" title="Social-Link" target="_blank"><i class="fab fa-linkedin"></i></a>
