added new before and after

--- a/gallery.html
+++ b/gallery.html
@@ -148,6 +148,8 @@
     <h6>Click Above</h6>
   </label>
 
+  <img src="img\before-and-after8.webp" alt="Gallery page Image" class="img-responsive">
+
 
 <img src="img\before-and-after3.webp" alt="Gallery page Image" class="img-responsive">
 
