--- a/services.html
+++ b/services.html
@@ -216,6 +216,19 @@
         </div>
       </div>
 
+      <div class="service-box">
+
+        <div class="service-icon">
+          <img class="service-img" src="img\oilstain.webp" alt="Services picture"></img>
+        </div>
+
+        <div class="service-title">Oil Stain Removal</div>
+        <div class="service-desc">
+          We can get that ugly oil stain washed away!
+        </div>
+      </div>
+
+
       </div>
     </div>
   </div>
