--- a/services.html
+++ b/services.html
@@ -219,12 +219,12 @@
       <div class="service-box">
 
         <div class="service-icon">
-          <img class="service-img" src="img\oilstain.webp" alt="Services picture"></img>
+          <img class="service-img" src="img\dryer-vent.webp" alt="Services picture"></img>
         </div>
 
-        <div class="service-title">Oil Stain Removal</div>
+        <div class="service-title">Dryer Vent Cleaning</div>
         <div class="service-desc">
-          We can get that ugly oil stain washed away!
+          Clogged Vents are Fire Hazards, Get them Cleaned out by Us Today!
         </div>
       </div>
 
