--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link
-  href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
-  rel="stylesheet"
-/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="scss/custom.css">
 
-
-
-<link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json">
 
 </head>
 
@@ -107,8 +103,8 @@
                             <a class="social-button facebook" href="https://www.facebook.com/CleanslatepressurewashingservicesLLC" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a class="social-button instagram" href="https://www.instagram.com/cleanslatepressurewashnola/" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a class="social-button tiktok" href="https://www.tiktok.com/@rnaquin1984?lang=en&is_from_webapp=1&sender_device=mobile&sender_web_id=7238679858033706542" target="_blank"><i class="fab fa-tiktok"></i></a>
-                            <a class="social-button yelp" href="https://www.yelp.com/" target="_blank"><i class="fab fa-yelp"></i></a>
-                            <a class="social-button linkedin" href="www.linkedin.com/in/rickey-naquin-719008297" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="social-button yelp" href="https://www.yelp.com/biz/clean-slate-pressure-washing-services-des-allemands?osq=Pressure+Washing&override_cta=Request+a+Quote" title="Social-Link" target="_blank"><i class="fab fa-yelp"></i></a>
+                            <a class="social-button linkedin" href="http://www.linkedin.com/in/rickey-naquin-719008297" title="Social-Link" target="_blank"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
                     
