styling done to all pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Cache-control: max-age=31536000" content="no-cache, no-store, must-revalidate">
-<meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control: max-age=31536000" content="no-cache, no-store, must-revalidate"><meta http-equiv="Pragma" content="no-cache">
    
-    <title>Clean Slate Pressure Washing Services Website HomePage</title>
+    <title>Clean Slate Pressure Washing Services Website</title>
+
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
     <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
@@ -19,14 +19,20 @@
 
 
 	<!-- css -->
+
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    
+    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet">
+
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"/>
+
     <link href="css/style.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="scss/custom.css">
+    <link href="scss/custom.css" rel="stylesheet">
 
     <link rel="manifest" href="manifest.json">
 
