--- a/services.html
+++ b/services.html
@@ -12,19 +12,21 @@
 <meta name="description" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
  
 
+<!-- css -->
+
 <link href="css/bootstrap.min.css" rel="stylesheet" />
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<link href="css/style.css" rel="stylesheet" />
+
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
-
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <link rel="stylesheet" href="scss/custom.css">
 
-
+<link href="css/style.css" rel="stylesheet" />
 
 <link rel="manifest" href="manifest.json">
 
@@ -105,13 +107,13 @@
 
 
 
-<div class="header-container">
+<div class="container">
 
   <h6>
-   Services
+   Our Services
     <div class="title-decoration">
     
-        <i class="fa-brands fa-creative-commons-nd"></i>
+        <i class="fas fa-bars"></i>
     </div>
   </h6>
   
@@ -225,7 +227,7 @@
 
         <div class="service-title">Dryer Vent Cleaning</div>
         <div class="service-desc">
-          Clogged Vents are Fire Hazards, Get them Cleaned out by Us Today!
+          Clogged Dryer Vents are Fire Hazards, Get them Cleaned out by Us Today!
         </div>
       </div>
 
