--- a/gallery.html
+++ b/gallery.html
@@ -13,17 +13,24 @@
 <meta name="description" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
  
 
+<!-- css -->
+
 <link href="css/bootstrap.min.css" rel="stylesheet" />
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-<link href="css/style.css" rel="stylesheet" />
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
+
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
 
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<link href="css/style.css" rel="stylesheet"/>
 
-<link rel="stylesheet" href="scss/custom.css">
+<link href="scss/custom.css" rel="stylesheet">
+
 <link rel="manifest" href="manifest.json">
 
 </head>
@@ -107,13 +114,13 @@
   Gallery
   <div class="title-decoration">
   
-      <i class="fa fa-images"></i>
+      <i class="fas fa-images"></i>
   </div>
 </h6>
 
 </div>
 
-</div>
+
 
 <div id="gallery" class="container-fluid">  
 
@@ -152,7 +159,7 @@
   <img src="img\before-and-after8.webp" alt="Gallery page Image" class="img-responsive">
 
 
-<img src="img\before-and-after3.webp" alt="Gallery page Image" class="img-responsive">
+  <img src="img\before-and-after3.webp" alt="Gallery page Image" class="img-responsive">
 
 
   <img src="img\before-and-after5.webp" alt="Gallery page Image" class="img-responsive">
