changed some more sizing around project

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
                   <h5>Testimonials</h5>
 
-                  <h8>What our customers are saying...</h8>
+                  <h8>What our happy customers are saying sbout us!</h8>
                   
               </div>
 
