small update to meta tags on gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
 
 <title>Clean Slate Gallery Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="name" content="Clean Slate Pressure Washing Services" />
+<meta name="name" content="Clean Slate Pressure Washing Gallery" />
 <meta name="description" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
  
 
