added some pictures to the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -139,7 +139,22 @@
     </source>
   </video>
 
-  <img src="img\cslogobeforeandafter.webp" alt="Gallery page Image" class="img-responsive">
+
+  <img src="img\before-and-after13.webp" alt="Gallery page Image" class="img-responsive">
+
+  <img src="img\before-and-after14.webp" alt="Gallery page Image" class="img-responsive">
+
+
+  <label>
+    <input class="image-toggler" type="checkbox">
+    <img class="thumbnail" src="img\frontporchandsidewalkbefore.webp" alt="Gallery page Image">
+    <img class="full" src="img\frontporchandsidewalkafter.webp" alt="Gallery page Image" loading="lazy">
+    <h6>Click Above</h6>
+  </label>
+
+
+
+  <img src="img\before-and-after10.webp" alt="Gallery page Image" class="img-responsive">
 
 
 
@@ -167,7 +182,7 @@
 
   <img src="img\before-and-after3.webp" alt="Gallery page Image" class="img-responsive">
 
-    <img src="img\before-and-after8.webp" alt="Gallery page Image" class="img-responsive">
+    <img src="img\before-and-after9.webp" alt="Gallery page Image" class="img-responsive">
 
 
 
@@ -179,7 +194,7 @@
       <h6>Click Above</h6>
     </label>
 
-  <img src="img\before-and-after5.webp" alt="Gallery page Image" class="img-responsive">
+  <img src="img\before-and-after12.webp" alt="Gallery page Image" class="img-responsive">
 
   <img src="img\before-and-after2.webp" alt="Gallery page Image" class="img-responsive">
 
@@ -212,6 +227,7 @@
 <img src="img\cslogobeforeandafter2.webp" alt="Gallery page Image" class="img-responsive">
 
 
+<img src="img\cslogobeforeandafter.webp" alt="Gallery page Image" class="img-responsive">
 
   <label>
     <input class="image-toggler" type="checkbox">
