--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <!--End of Review Slider-->
 
 
-        <section class="containter">
+        <section class="containter py-3">
             <div class="markate-container">
         <div id="markate-widget-contact">
 
