change to meta description on all pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta name = "viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
-    <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Lousiana" />
+    <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Louisiana" />
     
    
    <link rel="icon" type="image/png" href="img\whitecleanslatelogo.jpg">
