--- a/services.html
+++ b/services.html
@@ -7,10 +7,10 @@
 
 
 <title>Clean Slate Services page</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="name" content="Services Page " />
-<meta name="description" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
- 
+
+<meta name = "viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
+<meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Louisiana" />
 
 <!-- css -->
 
