--- a/gallery.html
+++ b/gallery.html
@@ -8,9 +8,10 @@
 
 
 <title>Clean Slate Gallery Page</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta name="name" content="Clean Slate Pressure Washing Gallery" />
-<meta name="description" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
+
+<meta name = "viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Clean Slate Pressure Washing Services, Clean Slate Pressure Washing, Pressure Washing in St. Charles Area, Pressure Washing in New Orleans Area, Pressure Washing Near Me " />
+    <meta name="description" content="A website for Clean Slate Pressure Washing LLC, a Pressure and Soft Wash Company located in South Louisiana" />
  
 
 <!-- css -->
