--- a/gallery.html
+++ b/gallery.html
@@ -16,19 +16,18 @@
 
 <!-- css -->
 
-<link href="css/bootstrap.min.css" rel="stylesheet" />
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+    
+<link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet">
 
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
 
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet"/>
 
-
-<link href="css/style.css" rel="stylesheet"/>
+<link href="css/style.css" rel="stylesheet">
 
 <link href="scss/custom.css" rel="stylesheet">
 
