updated the email button throughout website

--- a/gallery.html
+++ b/gallery.html
@@ -315,7 +315,7 @@
           
           <button> <i class="fas fa-phone"></i> <a href="tel:5043527963">Call Us</a></button> 
 
-          <button> <i class="far fa-envelope-open"></i> <a href = "mailto:rnaquin@cleanslatepressurewashingservices.net"> Email Us</a></button>
+          <button> <i class="far fa-envelope-open"></i> <a href = "mailto:rickeynaquin@cleanslatepressurewashing.com"> Email Us</a></button>
 
 
 
